# cpp-uni-project

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  GameView.cpp  GameView.h  Immune.cpp  Immune.h  Infected.cpp  Infected.h  Run.cpp  Run.h  SkinProblem.cpp  SkinProblem.h  main.cpp
